0.83
        Fix bug in Lucy backend (if you wrote a node Foo Bar and then one
        called Foo, it would delete Foo Bar from its index).

0.82    12 October 2013
        Fix uninitialised value warnings in Lucy backend

0.81    25 May 2013
        Fix compatibility with DBD::SQLite 1.83+ (RT#84680)
        Added a backend for searching with Lucy - Wiki::Toolkit::Search::Lucy
        Fix POD errors which are fatal with perl 5.18.

0.80    3 May 2012
        Spelling fix in Wiki::Toolkit::Search::Base
        Fixed deprecated use of foreach ... qw (fixes #53 and #54)
        Fixed bug with metadata_was in recent changes (#41).

0.79    14 August 2010
        Fix Win32 test failure http://www.cpantesters.org/cpan/report/8099980
        Declare minimum required Perl version
        (thanks to Alexandr Ciornii for the patches)

0.78    16 December 2009
        Fix various POD errors and add POD testing (#45)
        More recent changes tests (for #41)
        Fix transaction handling in SQLite backend (#49)

0.77    24 December 2008
        Complete support for store->list_metadata_by_type, which
          returns a list of all the metadata values
        Add store->list_metadata_names, which will tell you all the
          different metadata types (names)
        write_node: return the version of the node that was just committed,
        if successful
        Don't write out a new version of a node if the checksum is the
        same as the one already stored (#43)
        t/400_upgrade.t: skip all tests correctly if no backends
        configured (#44)
        Configure charset correctly when passing in an existing $dbh (#24)

0.76    13 July 2008
        Really add missing prereq of DBI!
        Add testing of database schema upgrades (#32)
        Move to new schema version 10, including some missing indexes
          and support for verified flags. Note that
          the code using this column has not yet been written (#25, #34).